--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "koa-joi-router",
-  "version": "5.1.1",
+  "name": "@vg-niche-and-growth/koa-joi-router",
+  "version": "5.1.2",
   "description": "Configurable, input validated routing for koa.",
   "main": "joi-router.js",
   "keywords": [
