--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "koa-joi-router",
-  "version": "5.3.1",
+  "name": "@vg-niche-and-growth/koa-joi-router",
+  "version": "5.3.2",
   "description": "Configurable, input validated routing for koa.",
   "main": "joi-router.js",
   "keywords": [
@@ -33,26 +33,28 @@
   },
   "homepage": "https://github.com/koajs/joi-router",
   "dependencies": {
-    "await-busboy": "1.0.3",
-    "clone": "2.1.2",
-    "co-body": "6.0.0",
-    "debug": "4.1.1",
+    "await-busboy": "1.0.1",
+    "clone": "2.1.1",
+    "co-body": "5.1.1",
+    "debug": "2.6.9",
     "delegates": "1.0.0",
     "flatten": "1.0.2",
     "is-gen-fn": "0.0.1",
-    "joi": "14.0.6",
-    "koa-router": "7.4.0",
+    "joi": "10.2.2",
+    "koa-router": "7.3.0",
     "methods": "1.1.2",
     "sliced": "1.0.1"
   },
   "devDependencies": {
+    "co-mocha": "^1.1.0",
+    "co-supertest": "^0.0.8",
     "eslint": "^3.17.1",
     "eslint-config-pebble": "^4.0.0",
     "eslint-plugin-standard": "^2.0.0",
     "istanbul": "1.1.0-alpha.1",
     "koa": "^2.1",
-    "mocha": "^6.0.2",
-    "supertest": "^3.4.2"
+    "mocha": "^3.0.2",
+    "supertest": "^0.15.0"
   },
   "eslintConfig": {
     "extends": [
