--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vg-niche-and-growth/koa-joi-router",
-  "version": "5.4.0",
+  "version": "5.4.1",
   "description": "Configurable, input validated routing for koa.",
   "main": "joi-router.js",
   "keywords": [
@@ -12,11 +12,9 @@
     "validation"
   ],
   "scripts": {
-    "test": "npm run test-cov && npm run lint",
-    "lint": "NODE_ENV=test ./node_modules/eslint/bin/eslint.js test/ --quiet",
+    "test": "npm run test-only && npm run lint",
+    "lint": "NODE_ENV=test ./node_modules/eslint/bin/eslint.js test/",
     "lint-fix": "NODE_ENV=test ./node_modules/eslint/bin/eslint.js test/ --quiet --fix",
-    "test-cov": "NODE_ENV=test istanbul cover _mocha -- --reporter spec --bail",
-    "open-cov": "open coverage/lcov-report/index.html",
     "test-only": "NODE_ENV=test mocha --reporter spec --bail"
   },
   "engines": {
@@ -33,25 +31,25 @@
   },
   "homepage": "https://github.com/koajs/joi-router",
   "dependencies": {
-    "@hapi/joi": "^16.1.7",
+    "@hapi/joi": "^16.1.8",
     "await-busboy": "1.0.3",
     "clone": "2.1.2",
     "co-body": "6.0.0",
     "debug": "4.1.1",
     "delegates": "1.0.0",
-    "flatten": "1.0.2",
+    "fix": "0.0.6",
+    "flatten": "1.0.3",
     "is-gen-fn": "0.0.1",
     "koa-router": "7.4.0",
     "methods": "1.1.2",
     "sliced": "1.0.1"
   },
   "devDependencies": {
-    "eslint": "^3.17.1",
+    "eslint": "^6.7.2",
     "eslint-config-pebble": "^4.0.0",
-    "eslint-plugin-standard": "^2.0.0",
-    "istanbul": "1.1.0-alpha.1",
-    "koa": "^2.1",
-    "mocha": "^6.1.3",
+    "eslint-plugin-standard": "^4.0.1",
+    "koa": "^2.11.0",
+    "mocha": "^6.2.2",
     "supertest": "^4.0.2"
   },
   "eslintConfig": {
