--- a/.npmrc
+++ b/.npmrc
@@ -1,6 +1,7 @@
-registry = https://artifacts.schibsted.io/artifactory/api/npm/npm-virtual
-always-auth = true
-email = ${ARTIFACTORY_USER}
-_auth = ${ARTIFACTORY_NPM_SECRET}
+@niche-and-services:registry=https://artifacts.schibsted.io/artifactory/api/npm/npm-virtual/
+//artifacts.schibsted.io/artifactory/api/npm/npm-virtual/:_password=${ARTIFACTORY_NPM_PASSWORD}
+//artifacts.schibsted.io/artifactory/api/npm/npm-virtual/:username=${ARTIFACTORY_USER}
+//artifacts.schibsted.io/artifactory/api/npm/npm-virtual/:email=${ARTIFACTORY_USER}
+//artifacts.schibsted.io/artifactory/api/npm/npm-virtual/:always-auth=true
 save-exact = true
 package-lock = false
