--- a/package.json
+++ b/package.json
@@ -33,22 +33,22 @@
   },
   "homepage": "https://github.com/koajs/joi-router",
   "dependencies": {
-    "@hapi/joi": "17.1.0",
-    "@koa/router": "8.0.8",
-    "await-busboy": "1.0.3",
-    "clone": "2.1.2",
-    "co-body": "6.0.0",
-    "debug": "4.1.1",
-    "delegates": "1.0.0",
-    "flatten": "1.0.3",
-    "is-gen-fn": "0.0.1",
-    "methods": "1.1.2",
-    "sliced": "1.0.1"
+    "@hapi/joi": "^17.1.1",
+    "@koa/router": "^8.0.8",
+    "await-busboy": "^1.0.3",
+    "clone": "^2.1.2",
+    "co-body": "^6.0.0",
+    "debug": "^4.1.1",
+    "delegates": "^1.0.0",
+    "flatten": "^1.0.3",
+    "is-gen-fn": "^0.0.1",
+    "methods": "^1.1.2",
+    "sliced": "^1.0.1"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
     "koa": "^2.11.0",
-    "mocha": "^7.1.0",
+    "mocha": "^7.1.1",
     "nyc": "^15.0.0",
     "supertest": "^4.0.2"
   },
